kubernets.yml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cct-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cct-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: cct-app
    spec:
      containers:
        - name: cct-app
          image: gcr.io/rj-smtr/app-cct:1.0.2-rc.1
          # image: gcr.io/PROJECT_ID/IMAGE_APP:TAG      
          ports:
            - containerPort: 80
          # resources:
          #   limits:
          #     cpu: 500m
          #     memory: 128Mi
      restartPolicy: Always
---
#Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cct-app
  name: cct-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cct-app
---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cct-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    # nginx.org/client-max-body-size: "100m"
spec:
  tls:
    - hosts:
        - app.cct.cluster.mobilidade.dev
      secretName: cct-app-tls
  rules:
    - host: app.cct.cluster.mobilidade.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cct-app
                port:
                  number: 80
---
#Secret
# apiVersion: v1
# kind: Secret
# metadata:
#   name: custom-envs
# type: Opaque
# stringData:
#   NODE_ENV: "development"
#   PORT: "3000"
#   MONGODB_URL: "mongodb://gm6vx_gtfs:zCGp9*ghPmt#ezFjdrqo6nyI@mongo-gtfs-mongodb:27017/gtfseditor"
#   JWT_SECRET: "thisisasamplesecret"
#   JWT_ACCESS_EXPIRATION_MINUTES: "30"
#   JWT_REFRESH_EXPIRATION_DAYS: "30"
#   JWT_RESET_PASSWORD_EXPIRATION_MINUTES: "10"
#   JWT_VERIFY_EMAIL_EXPIRATION_MINUTES: "10"
#   SMTP_HOST: "email-server"
#   SMTP_PORT: "587"
#   SMTP_USERNAME: "email-server-username"
#   SMTP_PASSWORD: "email-server-password"
#   EMAIL_FROM: "support@yourapp.com"
#   DB_DEV_HOST: "postgis-postgresql"
#   DB_DEV_PORT: "5432"
#   DB_DEV_USER: "postgres"
#   DB_DEV_PASSWORD: "jys3nslnsx"
#   DB_DEV_DATABASE: "gtfs_stag"
#   DB_HOST: ""
#   DB_PORT: ""
#   DB_USER: ""
#   DB_PASSWORD: ""
#   DB_DATABASE: ""
